# WebServ

./: .dockerignore  .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  CONFIG_GUIDE.md  CONFIG_PARSER_SUMMARY.md  Dockerfile  EVAL_TEST.md  LOGGER.md  LOGGER_EXPLANATION.md  Makefile  README.md  SESSION_MANAGMENT.md  a.out  class_architecture_guide.md  confParsertest  cookies-test.txt  main.cpp  test_client  webserv
conf/: Anton.conf  config_example_not_for_execution.conf  default.conf  minimum.conf  test.conf  tester.conf  working.conf  working_new.conf
erorr_pages/: 400.html  403.html  404.html  405.html  500.html  502.html  503.html
outdated/: http_response.cpp  http_response.hpp
outdated/server/: server.cpp  server.hpp
runtime/www/: Tester.html  Tester_Damien.html  admin.html  cookie_tester.html  index.html  login.html  session_ui.html
src/: CMakeLists.txt  debug.hpp  main.cpp
src/HttpMessage/: ahttp_messag.hpp  ahttp_message.cpp
src/cgi/: cgi.cpp  cgi.hpp  cgiHelpers.cpp
src/config/: ConfigDocumentation.md  README.md  config.cpp  config.hpp  config_structures.cpp  config_structures.hpp  default.conf  directivesParsers.cpp  directivesParsers.tpp  directives_parsers.cpp  directives_parsers.tpp  test.conf
src/event_loop/: event_loop.cpp  event_loop.hpp
src/exceptions/: config_exceptions.hpp
src/helpers/: helpers.cpp  helpers.hpp  helpers.tpp
src/http/: http.hpp
src/logging/: logger.cpp  (+1 more)
test/: TCP_client-server_pair.hpp  TCP_client.cpp  TCP_server.cpp  a.out  confParsertest.cpp
tests/: Makefile  Web Server Security Tester.py  slow_sender.py
(+118 files in other folders)
